--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									<svg t="1712975618392" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5398" width="39" height="39"><path d="M512 0c282.7264 0 512 229.2736 512 512s-229.2736 512-512 512S0 794.7264 0 512 229.2736 0 512 0z m-104.5504 256H227.584l214.1952 279.6288L238.9248 768h87.1936l157.3632-179.0976L620.9024 768h175.5392l-223.6928-294.7328L764.2368 256h-87.2192l-145.408 163.6096L407.4496 256z m-25.3952 49.1264l312.7808 411.8528h-48.3328L330.112 305.152h51.9424z" fill="#ffffff" p-id="5399"></path></svg>
 								</a>
 								<!-- <telegram/> -->
-								<a href="#" class="svgtyple">
+								<a href="https://t.me/PIZZAMEW_ONSOL2024" class="svgtyple">
 									<svg t="1712975433044" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4396" width="42" height="42"><path d="M512 66.4C264.6 66.4 64 265.9 64 512c0 246.1 200.6 445.6 448 445.6S960 758.1 960 512c0-246.1-200.6-445.6-448-445.6z m232.1 243.3l-80.7 420.5c-5.6 29.9-22 37.1-44.5 23.3L496.1 653.1l-59 63.3c-6.8 7.6-12.5 13.8-24.6 13.8l8.3-138.9 227.8-227.2c10.1-10.2-2.1-15.1-15.4-6.2L351.9 554.6l-121.6-42.7c-26.1-8.2-26.4-28.2 5.9-42.7L709.9 267c21.7-10.8 42.4 5.9 34.2 42.7z" fill="#FFFFFF" p-id="4397"></path></svg>
 								</a>
 								<!-- pump -->
