--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							
 							<p class="mt-2">
 								<!-- twitter -->
-							    <a href="#" class="svgtyple">
+							    <a href="https://x.com/PIZZAMEW_SOL" class="svgtyple">
 									<svg t="1712975618392" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5398" width="39" height="39"><path d="M512 0c282.7264 0 512 229.2736 512 512s-229.2736 512-512 512S0 794.7264 0 512 229.2736 0 512 0z m-104.5504 256H227.584l214.1952 279.6288L238.9248 768h87.1936l157.3632-179.0976L620.9024 768h175.5392l-223.6928-294.7328L764.2368 256h-87.2192l-145.408 163.6096L407.4496 256z m-25.3952 49.1264l312.7808 411.8528h-48.3328L330.112 305.152h51.9424z" fill="#ffffff" p-id="5399"></path></svg>
 								</a>
 								<!-- <telegram/> -->
